--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,93 @@
 body{
     font-family: "Cormorant Garamond", sans-serif;
+    font-size: 20px;
+    line-height: 1;
 }
 
-header{
+textarea{
+    background: transparent;
+    border: none;
+    resize: none;
+    color: black;
+    border-left: 1px solid blue;
+}
+
+.jumbotron{
     text-align: center;
+    background: transparent;
+    border: none;
+    resize: none;
+    color: #8b2525;
+    border-bottom: 1px solid blue;
 }
 
-ul,li{
-    list-style-type: none;
+.description{
+    white-space: pre-wrap;
+}
+
+.time-block {
+    text-align: center;
+    border-radius: 15px;
+}
+
+.row{
+    white-space: pre-wrap;
+    height: 70px;
+    border-top: 1px solid white;
+}
+
+.hour{
+    background-color: #9e43c2;
+    color: whitesmoke;
+    border-top: 1px dashed black;
+}
+
+.past{
+    background-color: #d3d3d3;
+    color: white;
+}
+
+.present{
+    background-color: #ff6961;
+    color: white;
+}
+
+.future{
+    background-color: #77dd77;
+    color: white;
+}
+
+.saveBtn{
+    border-left: 1px solid black;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background-color: #06aed5;
+    color: black;
+}
+
+.saveBtn i:hover{
+    font-size: 20px;
+    transition: all 0.3s ease-in-out;
+}
+
+@media screen and (max-width: 768px), screen and (max-width: 575px) {
+    .row{
+        height:auto;
+        margin-top: 20px;
+    }
+
+    .hour {
+    padding-right: 17%;
+  }
+
+  .saveBtn {
+    border: 0;
+    border-radius: 0.25rem;
+    height: 50px;
+  }
+
+  textarea {
+    min-height: 85px;
+    border: 0;
+  }
 }
