--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 body{
+    background-color: rgb(0, 0, 0);
     font-family: "Cormorant Garamond", sans-serif;
     font-size: 20px;
     line-height: 1;
@@ -17,8 +18,8 @@ textarea{
     background: transparent;
     border: none;
     resize: none;
-    color: #8b2525;
-    border-bottom: 1px solid blue;
+    color: #17c9cf;
+    border-bottom: 7px solid blue;
 }
 
 .description{
@@ -32,8 +33,8 @@ textarea{
 
 .row{
     white-space: pre-wrap;
-    height: 70px;
-    border-top: 1px solid white;
+    height: 80px;
+    border-top: 1px solid rgb(10, 59, 221);
 }
 
 .hour{
